--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
     <title>Welcome to Lisbon</title>
   </head>
   <body>
-    <h1>Welcome to Lisbon</h1>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Galway</h1>
+        <h2>The most charming city in Ireland</h2>
+        <a href="#more">Learn more</a>
+      </header>
+
+      <footer>
+        This project was coded by Reka Acs amd is
+        <a
+          href="https://github.com/RekaMel/galway-travel-project"
+          target="_blank"
+        ></a>
+        open sourced.
+      </footer>
+    </div>
   </body>
 </html>
