--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <a
           href="https://github.com/RekaMel/galway-travel-project"
           target="_blank"
-        ></a>
-        open sourced.
+          >open sourced.</a
+        >
       </footer>
     </div>
   </body>
