--- a/index.html
+++ b/index.html
@@ -23,12 +23,54 @@
       </header>
 
       <footer>
-        This project was coded by Reka Acs amd is
-        <a
-          href="https://github.com/RekaMel/galway-travel-project"
-          target="_blank"
-          >open sourced.</a
-        >
+        <section class="grid">
+          <div>
+            <h3>More about Galway</h3>
+            <ul>
+              <li>
+                <a href="https://www.galwayairport.com/" target="_blank"
+                  >Galway Airport Website</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://maps.app.goo.gl/bMbAi7hVQSHFNpXs5"
+                  target="_blank"
+                  >Map of Galway</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.transportforireland.ie/plan-a-journey/network-maps/galway-city-bus-services/"
+                  target="_blank"
+                  >Public Transport Galway</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Reka and I've been living in Lisbon for several
+              years. I'm very fond of the city. I created this page as part of a
+              project for SheCodes Responsive to develop my coding skills.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes Responsive
+              to develop my coding skills.
+              <br />
+              This project was coded by Reka Acs amd is
+              <a
+                href="https://github.com/RekaMel/galway-travel-project"
+                target="_blank"
+                >open sourced.</a
+              >
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
