Added content section to page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,40 @@
         <h2>The most charming city in Ireland</h2>
         <a href="#more">Learn more</a>
       </header>
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              src="images/galway-body.jpg"
+              alt="Galway shopping street"
+              class="galway-body-img"
+            />
+          </div>
+          <div>
+            <h2>Why Galway?</h2>
+            <h3>Galway: The 'Friendliest, Most Charming City'</h3>
+            <p>
+              Galway is a bustling Irish city that is rich in history. Its
+              thriving university contributes to the vibrant atmosphere, while
+              the city’s welcoming character and intimate feel add to its
+              appeal. It’s also especially beautiful, with cobblestone streets,
+              medieval buildings, and a rapid river running through it, that
+              spills out into the Irish Sea. It really is as charming and
+              enticing as it sounds.
+            </p>
+            <p>
+              If you are reading this article, you likely already know that
+              Ireland is an incredibly special place to visit. Each destination
+              on this island country has its own unique appeal. But I want to
+              share with you how particularly charming Galway is for those who
+              travel to the west coast of Ireland.
+            </p>
+          </div>
+        </section>
+      </main>
 
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns">
           <div>
             <h3>More about Galway</h3>
             <ul>
@@ -51,7 +82,7 @@
           <div>
             <h3>About me</h3>
             <p>
-              Hi! My name is Reka and I've been living in Lisbon for several
+              Hi! My name is Reka and I've been living in Galway for several
               years. I'm very fond of the city. I created this page as part of a
               project for SheCodes Responsive to develop my coding skills.
             </p>
@@ -62,7 +93,7 @@
               I created this page as part of a project for SheCodes Responsive
               to develop my coding skills.
               <br />
-              This project was coded by Reka Acs amd is
+              This project was coded by Reka Acs and is
               <a
                 href="https://github.com/RekaMel/galway-travel-project"
                 target="_blank"
