Added cards with pictures about restaurants

--- a/index.html
+++ b/index.html
@@ -51,6 +51,112 @@
             </p>
           </div>
         </section>
+        <section class="secondary">
+          <h2 class="text-center">CAFÉS</h2>
+          <h3 class="text-center">My favorite Fish&Chips Places in Galway</h3>
+
+          <div class="grid grid-3-columns-card">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/Hooked2.jpg"
+                  alt="Image of Restaurant Hooked"
+                  class="image-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Hooked Restaurant</h4>
+                <p>
+                  Hooked serves everything from traditional fish and chips with
+                  tartare sauce, to seafood tagliatelle and pan-fried dishes.
+                  Our food philosophy is “hook it and cook it”.
+                </p>
+                <h5>Address:</h5>
+                <p>65 Henry Street</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Beside the traditional fish and chips, here you can find also
+                  the gluten free version. Almost unique in town, offering an
+                  option for people with gluten intolerance.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a href="https://hookedgalway.ie/" target="_blank" class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/McDonaghs.jpg"
+                  alt="Image of Restaurant McDonaghs"
+                  class="image-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>McDonagh's Restaurant</h4>
+                <p>
+                  Established in 1902, we bring over 115 years of knowledge to
+                  serving the best seafood and have earned a reputation as one
+                  of Ireland’s finest seafood houses.
+                </p>
+                <h5>Address:</h5>
+                <p>22 Quay St</p>
+                <h5>What I like about it</h5>
+                <p>
+                  In our Seafood Restaurant, you will find a wonderful variety
+                  of fish dishes on the menu, ranging form native Clarenbridge
+                  oyster to salmon, mussels, scallops and hake.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="http://www.mcdonaghs.net/about/"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/SeefoodBar.jpg"
+                  alt="Image of SeefoodBar Kirwan"
+                  class="image-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>The Seafood Bar</h4>
+                <p>
+                  Our restaurant is located in the heart of the medieval centre
+                  of Galway in the historical Kirwan’s Lane, which still
+                  exhibits a strong presence of 16th and 17th century
+                  architecture.
+                </p>
+                <h5>Address:</h5>
+                <p>3 Kirwan's Ln</p>
+                <h5>What I like about it</h5>
+                <p>
+                  We offer modern Irish food prepared with quality fresh local
+                  produce. Our speciality is seasonal seafood, but diners have
+                  plenty of choice, from meat to vegetarian dishes.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.kirwanslane.ie/index"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
