Responsive Google Maps Embed

--- a/index.html
+++ b/index.html
@@ -57,12 +57,20 @@
 
           <div class="grid grid-3-columns-card">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/Hooked2.jpg"
                   alt="Image of Restaurant Hooked"
                   class="image-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2386.009151184124!2d-9.063653324163276!3d53.27145568032556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96f9907e9f39%3A0x386be73ba3534c22!2sHooked!5e0!3m2!1shu!2sat!4v1697197621901!5m2!1shu!2sat"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Hooked Restaurant</h4>
@@ -88,12 +96,20 @@
             </div>
 
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/McDonaghs.jpg"
                   alt="Image of Restaurant McDonaghs"
                   class="image-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2386.0359851620906!2d-9.056828024163334!3d53.27097488036148!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96fb190c2d4f%3A0xc068fa46e29bb64c!2sMcDonagh&#39;s!5e0!3m2!1shu!2sat!4v1697198872508!5m2!1shu!2sat"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>McDonagh's Restaurant</h4>
@@ -122,12 +138,20 @@
             </div>
 
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/SeefoodBar.jpg"
                   alt="Image of SeefoodBar Kirwan"
                   class="image-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2386.013041228367!2d-9.056939024163214!3d53.27138598033072!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96e594d6a7bb%3A0xc070c1f7418154b2!2sThe%20Seafood%20Bar%20at%20Kirwan&#39;s!5e0!3m2!1shu!2sat!4v1697198970422!5m2!1shu!2sat"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>The Seafood Bar</h4>
