--- a/index.html
+++ b/index.html
@@ -181,6 +181,35 @@
             </div>
           </div>
         </section>
+
+        <section>
+          <h2 class="text-center">Gallery</h2>
+          <h3 class="text-center">My photos from Galway</h3>
+
+          <div class="grid grid-3-columns-card gallery">
+            <div>
+              <img
+                src="images/galway-gallery-1.jpg"
+                alt=""
+                class="image-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="images/galway-gallery-2.png"
+                alt=""
+                class="image-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="images/galway-gallery-3.jpg"
+                alt=""
+                class="image-responsive"
+              />
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
