--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             />
           </div>
           <div>
+            <a name="more"></a>
             <h2>Why Galway?</h2>
             <h3>Galway: The 'Friendliest, Most Charming City'</h3>
             <p>
